# DeepOrbit

./: .gitignore  .mcp.json  AGENTS.md  Architecture.md  CLAUDE.md  DeepOrbitPrompt.md  GEMINI.md  LICENSE  README.md  README.zh-CN.md  README_CN.md  SKILLS_OPERATION_GUIDE.md  deeporbit.json  gemini-extension.json  kimi.plugin.json  package-lock.json  package.json  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
99_System/: Profile.md
commands/: ai-newsletters.toml  ai-products.toml  ai-research-digest.toml  archive.toml  arxiv-translator.toml  ask.toml  do-brainstorm.toml  fix-links.toml  kickoff.toml  marker.toml  note_summary.toml  notebooklm.toml  parse-knowledge.toml  research.toml  start-my-day.toml  translate-pdf.toml
conductor/: product.md  tech-stack.md  tracks.md
docs/: README.md  agent-cli.md  architecture.md  daily-news.md  getting-started.md  methodology.md  multi-vault-routing-proposal.md  pdf-to-markdown-improvement-proposal.md  runtime-compatibility.md  skill-ecosystem-research.md  sync-and-rag.md  teach-me-bridge.md  todo-calendar.md  tooling-landscape.md
hooks/: hooks.json
integrations/: runtime-profiles.json
mcp/: README.md
plugin/: README.md  esbuild.config.mjs  manifest.json  package-lock.json  package.json  tsconfig.json
scripts/: analyze_vault.py  fetch_news_sources.ps1  fetch_news_sources.sh  init_deeporbit_prompt.ps1  init_deeporbit_prompt.sh  switch_language.py  update_folders.py  update_metadata.py  validate_repo.py
site/: ASSETS.md  astro.config.mjs  package-lock.json  package.json
(+254 files in other folders)
