[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "deeporbit"
version = "2.0.0"
description = "Portable Agent Skills and local-first tooling for Obsidian knowledge systems"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "dullbird" }]
dependencies = []

[project.optional-dependencies]
rag = ["chromadb>=0.4.0"]
mcp = ["mcp>=1.2.0"]
dev = ["pytest>=8", "pytest-cov>=5", "PyYAML>=6"]

[project.scripts]
deeporbit = "deeporbit.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
deeporbit = ["dashboard.html"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
